Add hardcoded container context menu items to messages.json

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -83,6 +83,14 @@
 		"message": "Move to New &Window"
 	}
 
+	, "sidebarContextMenuReopenInContainer": {
+		"message": "Re&open in Container"
+	}
+
+	, "sidebarContextMenuReopenInNewContainer": {
+		"message": "Reopen in New Container"
+	}
+
 	, "sidebarContextMenuMoveToExistingWindow": {
 		"message": "Window $WINDOW_ID$ (active tab: $ACTIVE_TAB_TITLE$)"
 		, "placeholders": {
