--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -109,4 +109,56 @@
 	, "sidebarContextMenuReopenInNewContainer": {
 		"message": "Reopen in New Container"
 	}
+
+	, "optionsTheme": {
+		"message": "Theme"
+	}
+
+	, "optionsThemeDark": {
+		"message": "Dark"
+	}
+
+	, "optionsThemeLight": {
+		"message": "Light"
+	}
+
+	, "optionsThemeClassic": {
+		"message": "Classic"
+	}
+
+	, "optionsThemeNone": {
+		"message": "None"
+	}
+
+	, "optionsChildTabOpenPosition": {
+		"message": "Child tab open position:"
+	}
+
+	, "optionsChildTabOpenPositionDefault": {
+		"message": "Default"
+	}
+
+	, "optionsChildTabOpenPositionFirst": {
+		"message": "First"
+	}
+
+	, "optionsChildTabOpenPositionLast": {
+		"message": "Last"
+	}
+
+	, "optionsStayInTreeOnTabClose": {
+		"message": "Stay in tree on closing last child"
+	}
+
+	, "optionsDebugMode": {
+		"message": "Debug mode"
+	}
+
+	, "optionsClearTreeData": {
+		"message": "Clear tree data"
+	}
+
+	, "optionsClearTreeDataConfirmationPopup": {
+		"message": "Clearing the data will reset all trees.\nContinue?"
+	}
 }
