Add option to toggle tab close button

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -161,4 +161,8 @@
 	, "optionsClearTreeDataConfirmationPopup": {
 		"message": "Clearing the data will reset all trees.\nContinue?"
 	}
+
+	, "showSidebarTabCloseButton": {
+		"message": "Show tab close button in sidebar"
+	}
 }
